# 42_Philosophers

./: CMakeLists.txt  Makefile
includes/: philosophers.h
philo/: Makefile
philo/includes/: philosophers.h
philo/srcs/: actions.c  free.c  main.c  mutex.c  threads.c  utils.c
srcs/: actions.c  checks.c  free.c  init.c  main.c  mutex.c  threads.c  utils.c
